Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 5.0.0-beta1
-
None
-
-
eff5cbeb86d36297d86e55d5c94a9bb767d1095b (qt-creator/qt-creator/5.0)
Description
The crash only happens if the debuggee contains debug information and the clangd experimental option is enabled.
Backtrace:
#0 CppTools::CppEditorOutline::model (this=0x0) at /usr/include/c++/11.1.0/bits/unique_ptr.h:173
#1 0x00007fff8274535a in CppEditor::Internal::CppOutlineWidget::CppOutlineWidget (this=0x55555998ac30, editor=<optimized out>)
at ./src/plugins/cppeditor/cppoutline.cpp:108
#2 0x00007fff82745a6c in CppEditor::Internal::CppOutlineWidgetFactory::createWidget (this=<optimized out>, editor=<optimized out>)
at ./src/plugins/cppeditor/cppoutline.cpp:228
#3 0x00007fffd81f00b6 in TextEditor::Internal::OutlineWidgetStack::updateEditor (this=0x555557244a80, editor=0x555559069330)
at ./src/plugins/texteditor/outlinefactory.cpp:194
#4 0x00007ffff6ad775b in ?? () from /usr/lib/libQt5Core.so.5
#5 0x00007fffd83f3f20 in Core::EditorManager::currentEditorChanged (this=<optimized out>, _t1=<optimized out>)
at ./build/src/plugins/coreplugin/Core_autogen/YAYUJISNOO/moc_editormanager.cpp:526
#6 0x00007fffd847ecdf in Core::Internal::EditorManagerPrivate::activateEditor (view=0x555555c9fda0, editor=0x555559069330, flags=...) at /usr/include/qt/QtCore/qflags.h:69
#7 0x00007fffd848656f in Core::Internal::EditorManagerPrivate::openEditor (view=0x555555c9fda0, filePath=..., editorId=..., flags=..., newEditor=0x7fffffffd577)
at ./src/plugins/coreplugin/editormanager/editormanager.cpp:927
#8 0x00007fffd84896ae in Core::EditorManager::openEditor (fileName=..., editorId=editorId@entry=..., flags=flags@entry=..., newEditor=newEditor@entry=0x7fffffffd577)
at ./src/plugins/coreplugin/editormanager/editormanager.cpp:3071
#9 0x00007fff82ff0e90 in Debugger::Internal::DebuggerEngine::gotoLocation (this=0x555557723b80, loc=...) at ./src/libs/utils/id.h:44
#10 0x00007fff82feb335 in Debugger::Internal::DebuggerEngine::gotoCurrentLocation (this=this@entry=0x555557723b80)
at ./src/plugins/debugger/debuggerengine.cpp:1127
#11 0x00007fff8307e6fc in Debugger::Internal::GdbEngine::activateFrame (this=0x555557723b80, frameIndex=7)
at ./src/plugins/debugger/gdb/gdbengine.cpp:3161
#12 0x00007fff8307e9db in Debugger::Internal::GdbEngine::handleStackListFrames (this=0x555557723b80, response=..., isFull=false)
at ./src/plugins/debugger/stackhandler.h:102
#13 0x00007fff83075989 in std::function<void (Debugger::Internal::DebuggerResponse const&)>::operator()(Debugger::Internal::DebuggerResponse const&) const (__args#0=...,
this=0x7fffffffd8e0) at /usr/include/c++/11.1.0/bits/std_function.h:556
#14 Debugger::Internal::GdbEngine::handleResultRecord (this=0x555557723b80, response=0x7fffffffd9c0)
at ./src/plugins/debugger/gdb/gdbengine.cpp:996
#15 0x00007fff8308b5ed in Debugger::Internal::GdbEngine::handleResponse (this=0x555557723b80, buff=...)
at ./src/plugins/debugger/gdb/gdbengine.cpp:422
#16 0x00007fff8308c3ae in Debugger::Internal::GdbEngine::readGdbStandardOutput (this=0x555557723b80)
at ./src/plugins/debugger/gdb/gdbengine.cpp:665
#17 0x00007ffff6ad775b in ?? () from /usr/lib/libQt5Core.so.5
#18 0x00007ffff6ad775b in ?? () from /usr/lib/libQt5Core.so.5
#19 0x00007ffff6a0956e in QProcess::readyReadStandardOutput(QProcess::QPrivateSignal) () from /usr/lib/libQt5Core.so.5
#20 0x00007ffff6a0ee76 in ?? () from /usr/lib/libQt5Core.so.5
#21 0x00007ffff6a0f3d5 in ?? () from /usr/lib/libQt5Core.so.5
#22 0x00007ffff6ad7790 in ?? () from /usr/lib/libQt5Core.so.5
#23 0x00007ffff6adac20 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) () from /usr/lib/libQt5Core.so.5
#24 0x00007ffff6adb42d in QSocketNotifier::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#25 0x00007ffff7719d62 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#26 0x00007ffff6aa03aa in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#27 0x00007ffff6af9bee in ?? () from /usr/lib/libQt5Core.so.5
#28 0x00007ffff4f6b10c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#29 0x00007ffff4fbeb99 in ?? () from /usr/lib/libglib-2.0.so.0
#30 0x00007ffff4f68871 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#31 0x00007ffff6af8fd6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#32 0x00007ffff6a9ed1c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#33 0x00007ffff6aa7284 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#34 0x000055555555faec in main (argc=<optimized out>, argv=<optimized out>) at ./src/app/main.cpp:821